
Implemented bib_manager.get_version() that gets the pickled file
version.
Tested and documented.

*****

Minor tweaks and cosmetics in config_manager.py.

*****

Updated API docs.

*****

Added packaging package to requirements.

*****

Rolled back tweak in config_manager.py.

*****

Bumped bibmanager version to 1.1.6.

The next merge removes the need for post-installation commands
and thus resolves #45 and #49
By the way, above where it says PR #45, should have been PR #46


*****  So 8. Sep 13:15:44 CEST 2019  *****

Moved first-ever initialization checks from config_manager.py
get() and set() function into the very beginning of the main().

*****

Updated some tests to make sure that they run on the mocked database.

*****

Added long_description_content_type into setup.py.


*****  Tue Dec 24 19:06:55 CLT 2019  *****

Some cosmetics edits in bib_manager.py

*****

Set explicitly the output of print_formatted_text() calls to stdout.
This fixes the testing for prompt_toolkit versions 2 and 3.

*****

Added update_content() method to Bib() object.
This method updates the attributes that are defined by a bibtex entry
and updates any extra info only if the new data is not None.
Added tests.

Added pdf and freeze attributes to Bib() object.  The info for these
attributes is not defined by the bibtex file.  Thus it has to be set
by the user, and such info is stored in the BM pickle database rather
than the BM bibtex database.
For now, these are just a placeholder (more on these soon).

Modified filter_field() and merge() functions to preserve non-bitex
information when updating/merging a new list of entries into the
database.


*****  Thu Dec 26 21:10:38 CLT 2019  *****

Channeled bm.edit() through merge(), now all database editing calls
(merge(), edit(), add_entries(), and add_bibtex()) go through the
merge() function; therefore, going through the update_content()
calls that preserve/update the meta info.

*****

Re-indented bm.edit() to four spaces.
